--- a/web/themes/custom/pcc/css/components/footer.css
+++ b/web/themes/custom/pcc/css/components/footer.css
@@ -1,4 +1,4 @@
 /* Light blue bar above footer */
 .lgd-footer {
-  border-top: var(--spacing-larger) var(--color-blue) solid;
+  border-top: var(--spacing-larger) var(--color-accent) solid;
 }
