--- a/web/themes/custom/pcc/css/components/header.css
+++ b/web/themes/custom/pcc/css/components/header.css
@@ -10,9 +10,13 @@
 
 /* Search submit button */
 .lgd-region--search .form-submit {
+  /*
+    Trying and failing to make the square submit button with a border be
+    the same height as the text input...
+  */
   /* height: 50.5px; */
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
   border: 3px var(--border-style) var(--color-white);
-  padding: calc(var(--button-padding-vertical) - 3px)
-    calc(var(--button-padding-horizontal) - 3px);
+  /* padding: calc(var(--button-padding-vertical) - 3px)
+    calc(var(--button-padding-horizontal) - 3px); */
 }
