--- a/web/themes/custom/pcc/css/components/service-cta-block.css
+++ b/web/themes/custom/pcc/css/components/service-cta-block.css
@@ -1,7 +1,10 @@
 /* Top task cta links */
 
 .service-cta-block__list {
-  padding-block-end: var(--vertical-rhythm-spacing);
+  /* padding-block-end: var(--vertical-rhythm-spacing); */
+  padding-block-end: var(--spacing-mega);
+  margin-block-end: var(--spacing-mega);
+  border-block-end: var(--border-accent);
 }
 
 .pcc-service-cta-block__list-item {
