--- a/web/themes/custom/pcc/css/base/variables.css
+++ b/web/themes/custom/pcc/css/base/variables.css
@@ -94,4 +94,17 @@ body {
 
   /* Page Title */
   --page-title-border: var(--border-accent);
+
+  /* Sidebar Items */
+  --sidebar-exposed-form-bg-color: transparent;
+
+  /* Guide Navigation */
+  --section-spacing-vertical-guide-nav: calc(
+    var(--spacing-large) + 1rem
+  ); /* 1rem to account for padding on left of bullets */
+  --section-spacing-horizontal-guide-nav: var(--spacing-large);
+  --guide-nav-column-count: 1;
+
+  /* Step-by-Step */
+  --step-by-step-part-of-color: var(--color-blue);
 }
