--- a/web/themes/custom/pcc/css/components/header.css
+++ b/web/themes/custom/pcc/css/components/header.css
@@ -8,6 +8,11 @@
   justify-content: start;
 }
 
+/* Menu toggle buttons */
+.lgd-header__toggle .icon {
+  margin-inline-end: var(--spacing-smaller);
+}
+
 /* Search submit button */
 .lgd-region--search .form-submit {
   /*
