--- a/web/themes/custom/pcc/templates/layout/header.html.twig
+++ b/web/themes/custom/pcc/templates/layout/header.html.twig
@@ -28,23 +28,25 @@
 
 					{% if has_search or has_secondary_menu %}
 						{#
-              The "Header Toggles" section sets a number of buttons to activate
-              - the primary menu/search regions on small screens, and
-              - the secondary region on all screen sizes (region where we expect
-                the services menu will be positioned).
-            #}
+																																										              The "Header Toggles" section sets a number of buttons to activate
+																																										              - the primary menu/search regions on small screens, and
+																																										              - the secondary region on all screen sizes (region where we expect
+																																										                the services menu will be positioned).
+																																										            #}
 						<div class="lgd-header__toggles">
 							{% if has_secondary_menu %}
 								<button class="lgd-header__toggle lgd-header__toggle--secondary" data-target="lgd-header__nav--secondary" aria-controls="lgd-header__nav--secondary" aria-expanded="false" aria-label="{{ 'Services: jump to services'|t }}">
+									<i class="icon fa-regular fa-chevron-down"></i>
 									<span class="lgd-header__toggle-text lgd-header__toggle-text--secondary">{{ 'Services'|t }}</span>
-									<span class="lgd-header__toggle-icon lgd-header__toggle-icon--secondary"></span>
+									{# <span class="lgd-header__toggle-icon lgd-header__toggle-icon--secondary"></span> #}
 								</button>
 							{% endif %}
 
 							{% if has_search %}
 								<button class="lgd-header__toggle lgd-header__toggle--primary" data-target="lgd-header__nav--primary" aria-controls="lgd-header__nav--primary" aria-expanded="false">
+									<i class="icon fa-regular fa-chevron-down"></i>
 									<span class="lgd-header__toggle-text lgd-header__toggle-text--primary">{{ 'Menu'|t }}</span>
-									<span class="lgd-header__toggle-icon lgd-header__toggle-icon--primary"></span>
+									{# <span class="lgd-header__toggle-icon lgd-header__toggle-icon--primary"></span> #}
 								</button>
 							{% endif %}
 						</div>
