--- a/web/themes/custom/pcc/css/components/guide-nav.css
+++ b/web/themes/custom/pcc/css/components/guide-nav.css
@@ -1,10 +1,11 @@
 .lgd-guide-nav {
-  margin-block-end: 0;
+  margin-bottom: 0;
   padding: 0;
   background-color: transparent;
 }
 
 .lgd-guide-nav__list {
+  padding-left: 0;
   list-style-type: none;
 }
 
