--- a/web/themes/custom/pcc/css/components/footer.css
+++ b/web/themes/custom/pcc/css/components/footer.css
@@ -1,4 +1,5 @@
 /* Light blue bar above footer */
 .lgd-footer {
+  margin-block-start: 0;
   border-top: var(--spacing-larger) var(--color-accent) solid;
 }
