--- a/web/themes/custom/pcc/css/components/header.css
+++ b/web/themes/custom/pcc/css/components/header.css
@@ -9,8 +9,16 @@
 }
 
 /* Menu toggle buttons */
+.lgd-header__toggles {
+  margin-inline-end: 0;
+}
+
 .lgd-header__toggle .icon {
   margin-inline-end: var(--spacing-smaller);
+}
+
+.lgd-header__nav--primary {
+  margin: 0;
 }
 
 /* Search submit button */
@@ -22,6 +30,12 @@
   /* height: 50.5px; */
   /* box-sizing: border-box; */
   border: 3px var(--border-style) var(--color-white);
-  /* padding: calc(var(--button-padding-vertical) - 3px)
-    calc(var(--button-padding-horizontal) - 3px); */
+  padding: calc(var(--button-padding-vertical) - 1.5px)
+    calc(var(--button-padding-horizontal) - 1.5px);
+}
+
+@media screen and (min-width: 48rem) {
+  .lgd-header__toggles {
+    margin-inline-end: var(--spacing);
+  }
 }
