--- a/web/themes/custom/pcc/css/components/banner.css
+++ b/web/themes/custom/pcc/css/components/banner.css
@@ -9,7 +9,7 @@
 }
 
 .banner--home-page .field--name-localgov-title {
-  font-size: var(--font-size-h1);
+  color: var(--color-white);
 }
 
 .banner--home-page .field--name-localgov-subsites-banner-text {
