--- a/web/themes/custom/pcc/css/components/button.css
+++ b/web/themes/custom/pcc/css/components/button.css
@@ -14,6 +14,7 @@
   font-family: var(--button-font-family);
   font-size: var(--font-size-medium);
   text-decoration: none;
+  font-weight: initial;
 }
 
 .button:hover {
@@ -21,6 +22,11 @@
   background-color: var(--button-bg-color-hover);
 }
 
+/* Override colours when in the light blue section. */
 .lgd-page-section--bg-colour-2 a.button {
   color: var(--color-white);
+}
+
+.lgd-page-section--bg-colour-2 a.button:hover {
+  color: var(--color-accent);
 }
