--- a/web/themes/custom/pcc/templates/layout/page.html.twig
+++ b/web/themes/custom/pcc/templates/layout/page.html.twig
@@ -204,14 +204,8 @@
               {% endif %}
 
               {% if has_footer_second %}
-                <div class="lgd-row__one-third">
+                <div class="lgd-row__two-thirds">
                   {{ page.footer_second }}
-                </div>
-              {% endif %}
-
-              {% if has_footer_third %}
-                <div class="lgd-row__one-third">
-                  {{ page.footer_third }}
                 </div>
               {% endif %}
             </div>
