--- a/web/themes/custom/pcc/css/base/variables.css
+++ b/web/themes/custom/pcc/css/base/variables.css
@@ -52,7 +52,7 @@ body {
   --color-info: var(--color-accent);
 
   /* Fonts */
-  --font-primary: "TransportNew", sans-serif;
+  --font-primary: "Noto Sans", sans-serif;
   --font-secondary: var(--font-primary);
 
   /* Headings */
