--- a/web/themes/custom/pcc/css/components/newsroom.css
+++ b/web/themes/custom/pcc/css/components/newsroom.css
@@ -1,9 +1,9 @@
 #views-exposed-form-localgov-news-list-all-news {
   background: var(--color-accent-2);
   display: flex;
-  align-items: center;
+  align-items: end;
   gap: 1.5rem;
-  padding: 1rem;
+  padding: 1rem 1.5rem;
   margin-bottom: var(--vertical-rhythm-spacing);
 
   .form-item {
@@ -22,7 +22,7 @@
 
 .view-id-localgov_news_list {
   margin-bottom: var(--spacing-mega);
-  
+
   .lgd-teaser {
     background: var(--color-accent-2);
     height: 100%;
