--- a/web/themes/custom/pcc/css/components/button.css
+++ b/web/themes/custom/pcc/css/components/button.css
@@ -34,3 +34,7 @@ button:hover {
 .lgd-page-section--bg-colour-2 a.button:hover {
   color: var(--color-accent);
 }
+
+.lgd-page-section--bg-colour-2 a.button:focus {
+  color: #000 !important;
+}
