--- a/web/themes/custom/pcc/css/components/page-sections.css
+++ b/web/themes/custom/pcc/css/components/page-sections.css
@@ -11,3 +11,7 @@
 .lgd-page-section--bg-colour-2 .link--button-style a:hover {
   color: var(--color-accent);
 }
+
+.lgd-page-section--bg-colour-2 .link--button-style a:focus {
+  color: #000;
+}
