--- a/web/themes/custom/pcc/css/components/callout-box.css
+++ b/web/themes/custom/pcc/css/components/callout-box.css
@@ -1,6 +1,7 @@
 .call-out-box__link {
   display: inline-block;
   text-decoration: none;
+  border-bottom: var(--border-width) var(--border-style) var(--color-blue);
 }
 
 .call-out-box__link:hover {
