--- a/web/themes/custom/pcc/css/components/featured-teasers.css
+++ b/web/themes/custom/pcc/css/components/featured-teasers.css
@@ -51,5 +51,13 @@
         object-fit: cover;
       }
     }
+
+    .field--type-datetime {
+      margin-top: 1.5rem;
+    }
+
+    .field--name-localgov-news-categories {
+      margin-bottom: 1rem;
+    }
   }
 }
