--- a/web/themes/custom/pcc/css/components/service-landing-page.css
+++ b/web/themes/custom/pcc/css/components/service-landing-page.css
@@ -4,6 +4,6 @@
   color: var(--color-blue);
 }
 
-.service-landing-page__contact a.external-link:after {
+.service-landing-page__contact a.external-link::after {
   background-color: var(--color-blue);
 }
