--- a/web/themes/custom/pcc/css/components/header.css
+++ b/web/themes/custom/pcc/css/components/header.css
@@ -23,12 +23,15 @@
 
 /* Search submit button */
 .lgd-region--search .form-submit {
+  padding: calc(var(--button-padding-vertical) - 1.5px)
+    calc(var(--button-padding-horizontal) - 1.5px);
   /*
     Trying and failing to make the square submit button with a border be
     the same height as the text input...
   */
   /* height: 50.5px; */
   /* box-sizing: border-box; */
+  border: 3px var(--border-style) var(--color-white);
   display: flex;
   border: none;
 
