Just don't apply 2 lots of padding

--- a/web/themes/custom/pcc/css/base/base.css
+++ b/web/themes/custom/pcc/css/base/base.css
@@ -27,3 +27,8 @@ h6,
   text-decoration: none;
   box-shadow: none;
 }
+
+/* Only apply horizontal padding once. */
+.padding-horizontal .padding-horizontal {
+  padding-inline: 0;
+}
